2011-12-25  Dmitry Xmelkov  <dmix@gmail.ru>

	Fix for bug #34514: misspelled in math.h
	Thanks to Naotaka Fujita.
	* include/math.h: Fix typo in documentation.
	* NEWS: Add to fixed bug list.

2011-12-24  Dmitry Xmelkov  <dmix@gmail.ru>

	Fix for bug #35093. Thanks to Eric Mertens for the patch.
	* libc/pmstring/strlcat_P.S: Fix X pointer decriment.
	* libc/string/strlcat.S: Fix X pointer decriment.
	* tests/regression/bug-35093.c: New file.
	* NEWS: Add to fixed bug list.

2011-12-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #35020: stdint.h: signed types need explicit "signed"
	* include/stdint.h: explicitly declare int*_t types as signed

2011-11-02  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iox64a1.h (enum TC_EVACT_enum): Fix typo in enum list.
	Compared to iox128a1.h. Thanks to Francois Costin for the fix.

2011-10-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox (faq_assign_chain): Add paragraph about avoiding
	IO register assignment chains.

2011-10-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox (faq_eeprom_corruption): Remove the remarks about
	the EEPROM being erased pagewise, as they are not true.

2011-09-26  Eric B. Weddington <eric.weddington@atmel.com>

	Partial fix for bug #32945.
	* common/macros.inc (LPM_R0_ZPLUS_* macros): Replace condition of
    BIG_CODE with __AVR_HAVE_ELPM__.

2011-09-26  Eric B. Weddington <eric.weddington@atmel.com>

	Partial fix for bug #33716.
	* include/avr/pgmspace.h: Deprecate typedefs with __progmem__ attribute.
	Document as such.

2011-09-26  Eric B. Weddington <eric.weddington@atmel.com>

	Fix for bug #33858.
	* include/avr/power.h: Add condition for _AVR_ATmega328_.
	* NEWS: Add to fixed bug list.

2011-09-26  Eric B. Weddington <eric.weddington@atmel.com>

	Fix for bug #33920.
	* include/avr/iotn167.h (ICR): Define ICR to be a word register.
	* NEWS: Add to fixed bug list.

2011-09-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
