@@ -20,6 +20,7 @@
   [#34514] misspelled in math.h
   [#35020] stdint.h: signed types need explicit "signed"
   [#35093] strlcat_P fails for some destinations
+  [#32773] stdiodemo source code is broken
   [no-id]  New names for CLKSTA/CLKSEL0/1 for AT90USB82/162
   system when power_all_disable() is used
   [no-id]  util/delay.h would not compile with -ffreestanding
